--- a/submission/index.html
+++ b/submission/index.html
@@ -330,8 +330,8 @@ footer a:hover{text-decoration:underline;}
 <section id="track-submission">
   <div class="form-card">
     <form action="https://formspree.io/f/xzzjejde" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="name" placeholder="Artist Name" required>
+      <input type="social URL" name="email" placeholder="Social URL" required>
       <input type="text" name="track" placeholder="Track Title" required>
 
       <!-- Lyrics box made larger -->
@@ -393,7 +393,7 @@ footer a:hover{text-decoration:underline;}
 
   <p class="section-text">Submitting your track for official release is not available yet. We are working hard to bring this feature soon!</p>
 
-  <div class="under-card-bw"><span>(Under Development)</span></div>
+  <div class="under-card-bw"><span>Under Development</span></div>
 
 </section>
 
