--- a/submission/index.html
+++ b/submission/index.html
@@ -305,7 +305,7 @@ footer a:hover{text-decoration:underline;}
 
   <a href="/">Home</a>
 
-  <a href="/about/">About Us</a>
+  <a href="https://www.tribletunes.com/about/">About Us</a>
 
   <a href="/contact/">Contact</a>
 
