--- a/index.html
+++ b/index.html
@@ -386,6 +386,9 @@ footer a:hover {
   <a href="/contact/">Contact</a>
 
   <a href="/submission/">Submission</a>
+  
+  <a href="/privacy/">Privacy Policy</a>
+
 
 </div>
 
@@ -639,7 +642,7 @@ footer a:hover {
     </div>
   </div>
 
-  <p class="swipe-text">⟷ Swipe for Next Video</p>
+  <p class="swipe-text">⟷ Youtube Video</p>
 </section>
 
 <style>
@@ -900,7 +903,9 @@ footer a:hover {
     <a href="/">Home</a> |
     <a href="/about/">About Us</a> |
     <a href="/contact/">Contact</a> |
-    <a href="/submission/">Submission</a>
+    <a href="/submission/">Submission</a> |
+    <a href="/privacy/">Privacy Policy</a>
+
   </p>
 </footer>
   <!-- SCRIPTS -->
