--- a/about/index.html
+++ b/about/index.html
@@ -183,6 +183,8 @@
   <a href="/about/">About Us</a>
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
+  <a href="/privacy/">Privacy Policy</a>
+
 </div>
 
 <!-- ABOUT US SECTION -->
@@ -236,9 +238,8 @@
     <a href="https://tribletunes.com/about/">About Us</a> |
     <a href="https://tribletunes.com/contact/">Contact</a> |
     <a href="https://tribletunes.com/submission/">Submission</a> |
-    <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
-    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
-    <a href="mailto:contact@tribletunes.com">Email</a>
+      <a href="//tribletunes.com/privacy">Privacy Policy</a>
+
   </p>
 </footer>
 
