--- a/contact/index.html
+++ b/contact/index.html
@@ -129,6 +129,8 @@
   <a href="/about/">About Us</a>
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
+  <a href="/privacy/">Privacy Policy</a>
+
 </div>
 
 <!-- CONTACT SECTION -->
@@ -161,7 +163,9 @@
     <a href="/">Home</a> |
     <a href="/about/">About Us</a> |
     <a href="/contact/">Contact</a> |
-    <a href="/submission/">Submission</a>
+    <a href="/submission/">Submission</a> |
+    <a href="/privacy/">Privacy Policy</a>
+
   </p>
 </footer>
 
