--- a/submission/index.html
+++ b/submission/index.html
@@ -233,6 +233,8 @@ footer a:hover {text-decoration:underline;}
   <a href="/about/">About Us</a>
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
+  <a href="/privacy/">Privacy Policy</a>
+
 </div>
 
 <!-- INTRO -->
@@ -304,9 +306,8 @@ footer a:hover {text-decoration:underline;}
     <a href="/about/">About Us</a> |
     <a href="/contact/">Contact</a> |
     <a href="/submission/">Submission</a> |
-    <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
-    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
-    <a href="mailto:contact@tribletunes.com">Email</a>
+    <a href="/privacy/">Privacy Policy</a>
+
   </p>
 </footer>
 
