--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ footer a:hover {
 
 <div id="sidebar">
 
-  <a href="/home/">Home</a>
+  <a href="/">Home</a>
 
   <a href="/about/">About Us</a>
 
@@ -900,7 +900,7 @@ footer a:hover {
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
-    <a href="/home/">Home</a>
+    <a href="/">Home</a> |
     <a href="/about/">About Us</a> |
     <a href="/contact/">Contact</a> |
     <a href="/submission/">Submission</a> |
