--- a/index.html
+++ b/index.html
@@ -99,26 +99,55 @@
 
   <!-- FAQ -->
   <section id="faq">
-    <h2 class="section-title">Have questions?</h2>
-    <h3 class="section-subtitle">We've got answers.</h3>
+  <h2 class="section-title">Have questions?</h2>
+  <h3 class="section-subtitle">We've got answers.</h3>
 
-    <div class="faq-item">
-      <button class="faq-question">What is TribleTunes?<span class="arrow-icon">▼</span></button>
-      <div class="faq-answer">
-        TribleTunes is a YouTube channel dedicated to creating high-quality lyric videos for your favorite songs.
-      </div>
+  <div class="faq-item">
+    <button class="faq-question">
+      What is TribleTunes? <span class="arrow-icon">▼</span>
+    </button>
+    <div class="faq-answer">
+      TribleTunes is a music and lyric video channel focused on delivering emotional, aesthetic, and impactful music visuals.
     </div>
+  </div>
 
-    <div class="faq-item">
-      <button class="faq-question">How often are new videos released?<span class="arrow-icon">▼</span></button>
-      <div class="faq-answer">We release new lyric videos daily.</div>
+  <div class="faq-item">
+    <button class="faq-question">
+      How often are new videos released? <span class="arrow-icon">▼</span>
+    </button>
+    <div class="faq-answer">
+      New lyric videos, playlists, and music features are uploaded daily.
     </div>
+  </div>
 
-    <div class="faq-item">
-      <button class="faq-question">Can I request a song?<span class="arrow-icon">▼</span></button>
-      <div class="faq-answer">Yes! You can submit on our submission page.</div>
+  <div class="faq-item">
+    <button class="faq-question">
+      Can I request a song? <span class="arrow-icon">▼</span>
+    </button>
+    <div class="faq-answer">
+      Yes! You can request songs through our <a href="/submission/">Submission Page</a> or contact form.
     </div>
-  </section>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">
+      Are all videos official? <span class="arrow-icon">▼</span>
+    </button>
+    <div class="faq-answer">
+      We work with artists and copyright licensing to ensure our lyric videos are created respectfully and legitimately.
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">
+      How can I support TribleTunes? <span class="arrow-icon">▼</span>
+    </button>
+    <div class="faq-answer">
+      Support us by subscribing, engaging with our uploads, requesting songs, and sharing our videos with friends.
+    </div>
+  </div>
+
+</section>
 
   <!-- NEWSLETTER -->
   <section id="newsletter">
