--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
     background: var(--bg-primary);
     overflow-x: hidden;
     line-height: 1.6;
-    text-align: left;
+    text-align: center;
     transition: var(--transition);
   }
 
@@ -92,6 +92,7 @@
     background-clip: text;
     animation: shimmer 3s infinite;
     white-space: nowrap;
+    cursor: pointer;
   }
 
   @keyframes shimmer {
@@ -416,7 +417,7 @@
     #scrollTop:hover {
       transform: none;
     }
-    
+
     .cta-btn:active {
       transform: scale(0.95);
     }
@@ -431,7 +432,7 @@
     <ion-icon name="moon-outline" id="themeIcon"></ion-icon>
   </div>
   <div class="header-logo">
-    <h1 class="logo">TribleTunes</h1>
+    <h1 class="logo" onclick="window.location.href='/'">TribleTunes</h1>
   </div>
   <div id="hamburger">
     <span></span>
@@ -451,6 +452,7 @@
   <a href="/submission/"><ion-icon name="cloud-upload-outline"></ion-icon> Submission</a>
   <a href="/privacy/"><ion-icon name="shield-checkmark-outline"></ion-icon> Privacy Policy</a>
   <a href="/terms/"><ion-icon name="document-text-outline"></ion-icon> Terms of Service</a>
+  <a href="/dmca/"><ion-icon name="alert-circle-outline"></ion-icon> DMCA</a>
 </div>
 
 <!-- ABOUT US SECTION -->
@@ -478,7 +480,7 @@
   <p class="section-text">
     Founded in February 2024, TribleTunes empowers emerging artists. In just over a year, we've reached incredible milestones, building a vibrant music community.
   </p>
-  
+
   <div class="stats-highlight">
     <div class="stats-grid">
       <div class="stat-item">
@@ -495,7 +497,7 @@
       </div>
     </div>
   </div>
-  
+
   <p class="section-text">
     We continue to grow, connecting talented creators with fans, offering a space where music is celebrated worldwide.
   </p>
@@ -527,7 +529,9 @@
     <a href="/contact/">Contact</a> |
     <a href="/submission/">Submission</a> |
     <a href="/privacy/">Privacy Policy</a> |
-    <a href="/terms/">Terms of Service</a>
+    <a href="/terms/">Terms of Service</a> |
+    <a href="/dmca/">DMCA</a> |
+    <a href="/cookies/">Cookie Policy</a>
   </p>
   <p style="margin-top: 15px; font-size: clamp(0.75rem, 1.5vw, 0.85rem);">Made with ❤️ for Music Lovers</p>
 </footer>
