--- a/dmca/index.html
+++ b/dmca/index.html
@@ -527,7 +527,7 @@
     <p>
       Please send all DMCA notices and counter-notifications to our designated copyright agent via email:
     </p>
-    <a href="mailto:dmca@tribletunes.com">dmca@tribletunes.com</a>
+    <a href="mailto:contact@tribletunes.com">dmca@tribletunes.com</a>
   </div>
 
   <p class="section-text" style="text-align: center; margin-top: 30px;">
