--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <a href="/submission/"><ion-icon name="cloud-upload-outline"></ion-icon> Submission</a>
     <a href="/privacy/"><ion-icon name="shield-checkmark-outline"></ion-icon> Privacy Policy</a>
     <a href="/terms/"><ion-icon name="document-text-outline"></ion-icon> Terms of Service</a>
+      <a href="/dmca/"><ion-icon name="alert-circle-outline"></ion-icon> DMCA</a>
   </nav>
 
   <!-- ABOUT -->
