--- a/index.html
+++ b/index.html
@@ -162,9 +162,18 @@ TribleTunes is a space where music and imagination soar together. We create and 
   </section>
 
   <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2025 TribleTunes. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 TribleTunes. All rights reserved.</p>
+  <p>
+    <a href="/">Home</a> |
+    <a href="/about/">About Us</a> |
+    <a href="/contact/">Contact</a> |
+    <a href="/submission/">Submission</a> |
+    <a href="/privacy/">Privacy Policy</a> |
+    <a href="/terms/">Terms of Service</a> |
+    <a href="/dmca/">DMCA</a> |
+    <a href="/cookies/">Cookie Policy</a>
+  </p>
 
   <button id="scrollTop"><ion-icon name="arrow-up-outline"></ion-icon></button>
 
